Attempted to structure proper routing between pages and make building blocks for styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,5 +13,6 @@
  *= require_tree .
  *= require_self
  */
-
-@import "sessions/sessions_form.css"
+ 
+ /* @import "home/homepage.css"
+ @import "sessions/sessions_form.css" */
