Finally have proper auth

--- a/app/assets/stylesheets/login/login.css
+++ b/app/assets/stylesheets/login/login.css
@@ -1,25 +1,5 @@
-.email-form {
-  display: flex; 
-  flex-direction: column; 
-  /* position: absolute; */
-  /* font-size: 20px; */
-  background-color:white;  
-  width: auto;
-  height: 50px;
-  box-sizing: border-box;
-  /* border: 1px solid grey; */
-  border-radius: 5px;
-  justify-content: space-between;
-  padding: 10px;
-  margin: 0 auto;
-   position: relative;
-  /* left: 70px; */
-  bottom: -175px;
-  
-}
-
-.email-main {
-  display: flex;  
+.login-parent {
+   display: flex;  
   flex-direction: row;
   align-content: center; 
   background-color:white;  
@@ -36,7 +16,25 @@
   
 }
 
-.email-input {
+/* .login-form {
+  display: flex;  
+  flex-direction: row;
+  align-content: center; 
+  background-color:white;  
+  width: 450px;
+  height: 500px;
+  box-sizing: border-box;
+  border: 1px solid grey;
+  border-radius: 5px;  
+  padding: 10px;
+  text-align: center;
+  margin: 0 auto;
+    position: relative;
+  bottom: -100px;
+  
+} */
+
+.login-input {
       display: flex; 
   flex-direction: column; 
   /* position: absolute; */
@@ -51,7 +49,7 @@
   margin: 0 auto;
 }
 
-.create-account {
+/* .create-account {
   display: flex; 
   flex-direction: column; 
   font-size: 15px;
@@ -67,9 +65,9 @@
   text-decoration: none;
   color: #1a73e8;
 
-}
+} */
 
-.identifier-submit {
+.login-submit {
   display: flex; 
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
@@ -89,31 +87,3 @@
   left: 140px;
   bottom: -75px;
 }
-
-.login-logo {
-  background-image: url("https://whipstache.com/wp-content/uploads/2017/11/Screenshot_33.png");
-  background-repeat: no-repeat;
-  width: 600px;
-  height: 600px;
-}
-
-/* .identifier-submit > li {
-  display: flex; 
-  font-family: 'Open Sans', sans-serif;
-  font-size: 15px;
-  text-align: center;
-  flex-direction: column; 
-  background-color:rgb(68, 103, 219);  
-  width: 80px;
-  height: 50px;
-  box-sizing: border-box;
-  border: 1px solid grey;
-  border-radius: 5px;
-  justify-content: space-between;
-  padding: 10px;
-  margin: 0 auto;
-  position: relative;
-  left: 140px;
-  bottom: -75px;
-}
-  */
