--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,4 +14,9 @@
  *= require_self
  */
  
-
+ @import "home/homepage.css";
+ @import "login/login.css";
+ @import "identifier/identifier.css";
+ @import "navbar/navbar.css";
+ @import "sessions_form.css";
+ @import "welcome/welcome.css";
