--- a/app/assets/stylesheets/navbar/navbar.css
+++ b/app/assets/stylesheets/navbar/navbar.css
@@ -7,7 +7,7 @@
   height: 50px;
   box-sizing: border-box;
   /* border: 7px solid black; */
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 10px;
 
 }
@@ -46,4 +46,18 @@
   border-radius: 5px;
   padding: 10px;
   text-align: center;
+}
+
+.header-button {
+  display: flex; 
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  text-align: center;
+  background-color: black;
+  color: white;
+  box-sizing: border-box;
+  border: 1px solid grey;
+  border-radius: 9px;
+  justify-content: space-between;
+  padding: 10px;
 }
