--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
     <script type="text/javascript">
       window.critUrl = "<%= image_url('crit.png') %>" 
     </script>
+    <script type="text/javascript">
+      window.diceLogoUrl = "<%= image_url('dicelogo.png') %>" 
+    </script>
+    <script type="text/javascript">
+      window.diceLoginUrl = "<%= image_url('dicelogin.png') %>" 
+    </script>
+
   </head>
 
   <body>
