--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,12 @@
     <script type="text/javascript">
       window.diceLoginUrl = "<%= image_url('dicelogin.png') %>" 
     </script>
+    <script type="text/javascript">
+      window.familiarUrl = "<%= image_url('familiar.png') %>" 
+    </script>
+    <script type="text/javascript">
+      window.prestUrl = "<%= image_url('prest.png') %>" 
+    </script>
 
   </head>
 
