--- a/app/assets/stylesheets/video/videoshow.css
+++ b/app/assets/stylesheets/video/videoshow.css
@@ -26,3 +26,18 @@
   display: flex;
   flex-direction: column;
 }
+
+.upnext {
+      color: var(--yt-spec-text-primary);
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 2rem;
+}
+
+.linebreak {
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid var(--yt-spec-10-percent-layer);
+    margin-bottom: 24px;
+    padding-bottom: 16px;
+}
