--- a/app/assets/stylesheets/navbar/navbar.css
+++ b/app/assets/stylesheets/navbar/navbar.css
@@ -2,11 +2,11 @@
   display: flex; 
   flex-direction: row; 
   background-color: maroon;  
-  width: auto;
-  height: 100px;
-  box-sizing: border-box;
+  /* width: auto; */
+  height: 56px;
+  /* box-sizing: border-box; */
   justify-content: space-between;
-  padding: 10px;
+  padding: 0 16px;
 
 }
 
