--- a/app/assets/stylesheets/identifier/identifier.css
+++ b/app/assets/stylesheets/identifier/identifier.css
@@ -89,13 +89,13 @@
   left: 140px;
   bottom: -75px;
 }
-
+/* 
 .login-logo {
   background-image: url("https://whipstache.com/wp-content/uploads/2017/11/Screenshot_33.png");
   background-repeat: no-repeat;
-  width: 600px;
-  height: 600px;
-}
+  width: 100px;
+  height: 100px;
+} */
 
 /* .identifier-submit > li {
   display: flex; 
