--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
       window.diceLogoUrl = "<%= image_url('dicelogo.png') %>" 
     </script>
     <script type="text/javascript">
+      window.d20Url = "<%= image_url('d20.png')%>"
+    </script>
+    <script type="text/javascript">
       window.diceLoginUrl = "<%= image_url('dicelogin.png') %>" 
     </script>
     <script type="text/javascript">
