--- a/app/assets/stylesheets/navbar/navbar.css
+++ b/app/assets/stylesheets/navbar/navbar.css
@@ -2,11 +2,13 @@
   display: flex; 
   flex-direction: row; 
   background-color: rgba(28, 28, 28, 0.8);  
-  /* width: auto; */
+  width: auto;
   height: 56px;
   /* box-sizing: border-box; */
   justify-content: space-between;
+  align-items: center;
   padding: 0 16px;
+  z-index: 0;
 
 }
 
