--- a/app/assets/stylesheets/identifier/identifier.css
+++ b/app/assets/stylesheets/identifier/identifier.css
@@ -89,8 +89,8 @@
   left: 140px;
   bottom: -75px;
 }
-/* 
-.login-logo {
+
+/* .login-logo {
   background-image: url("https://whipstache.com/wp-content/uploads/2017/11/Screenshot_33.png");
   background-repeat: no-repeat;
   width: 100px;
