Normal css tricks not working? possible parent

--- a/app/assets/stylesheets/home/homepage.css
+++ b/app/assets/stylesheets/home/homepage.css
@@ -17,7 +17,8 @@
 .index-all {
   display: flex;  
   flex-direction: row;
-  /* justify-content: space-evenly; */
+  
+  justify-content: space-evenly;
   /* border-bottom: 7px; */
 }
 
@@ -27,6 +28,8 @@
   position: relative;
   margin: 0 12px;
   justify-content: flex-end;
+  flex-wrap: wrap;
+  align-content: flex-start;
 }
 
 .root-back {
