--- a/app/assets/stylesheets/video/videoshow.css
+++ b/app/assets/stylesheets/video/videoshow.css
@@ -26,6 +26,7 @@
   display: flex;
   flex-direction: column;
   margin: 0;
+  color: white;
 }
 
 
@@ -41,10 +42,10 @@
 
   display: flex; 
   flex-direction: row; 
-  background-color: grey;  
+  background-color: rgba(40, 40, 40, .8);  
   width: auto;
   height: auto;
   box-sizing: border-box;
   justify-content: space-between;
-  padding: 10px;
+  padding: 2px;
 }
