--- a/app/assets/stylesheets/home/homepage.css
+++ b/app/assets/stylesheets/home/homepage.css
@@ -74,11 +74,18 @@
 .rec-title {
   margin: 0 0 0 0; 
   color: white;
+  font-size: 2rem;
 }
 
 .rec-user {
   margin: 0 0 0 0; 
-  color: #a3a3a3
+  color: #a3a3a3;
+  font-size: 1.3rem;
+}
+
+.up-next {
+  color: white;
+  font-size: 2rem;
 }
 
 .root-back {
