--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
     <script type="text/javascript">
       window.diceLogoUrl = "<%= image_url('dicelogo.png') %>" 
     </script>
+        <script type="text/javascript">
+      window.barsLogoUrl = "<%= image_url('bars.png') %>" 
+    </script>
     <script type="text/javascript">
       window.d20Url = "<%= image_url('d20.png')%>"
     </script>
