--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
     <script type="text/javascript">
       window.diceLogoUrl = "<%= image_url('dicelogo.png') %>" 
     </script>
-        <script type="text/javascript">
+    <script type="text/javascript">
+      window.angelLogoUrl = "<%= image_url('angellogo.png') %>" 
+    </script>
+    <script type="text/javascript">
       window.barsLogoUrl = "<%= image_url('bars.png') %>" 
     </script>
     <script type="text/javascript">
