--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
     <script type="text/javascript">
       window.angelLogoUrl = "<%= image_url('angellogo.png') %>" 
     </script>
+      <script type="text/javascript">
+      window.gitLogoUrl = "<%= image_url('gitlogo.png') %>" 
+    </script>
     <script type="text/javascript">
       window.barsLogoUrl = "<%= image_url('bars.png') %>" 
     </script>
