Mounted last logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
       <script type="text/javascript">
       window.gitLogoUrl = "<%= image_url('gitlogo.png') %>" 
     </script>
+      <script type="text/javascript">
+      window.personalLogoUrl = "<%= image_url('personallogo.png') %>" 
+    </script>
     <script type="text/javascript">
       window.barsLogoUrl = "<%= image_url('bars.png') %>" 
     </script>
