--- a/app/assets/stylesheets/navbar/sidebar.css
+++ b/app/assets/stylesheets/navbar/sidebar.css
@@ -5,7 +5,7 @@
   width: 56px;
   height: auto;
   box-sizing: border-box;
-  /* justify-content: space-between; */
+  justify-content: space-evenly;
   /* align-items: center; */
   padding: 0 16px;
   z-index: 0;
