--- a/app/assets/stylesheets/home/homepage.css
+++ b/app/assets/stylesheets/home/homepage.css
@@ -6,7 +6,9 @@
   flex-direction: row;
   border-bottom: 7px;
   flex-wrap: wrap;
-  align-content: flex-start;
+  /* align-content: flex-start; */
+  justify-content: space-between;
+  /* ISSUE HERE MAYBE */
 }
 
 .index-all {
