--- a/app/assets/stylesheets/home/landinghome.css
+++ b/app/assets/stylesheets/home/landinghome.css
@@ -17,10 +17,12 @@
     /* display: flex;
     flex-direction: row;
     align-content: flex-end; */
+    /* justify-content: space-between; */
 }
 
 .dupe-vids {
   display: flex;  
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  align-content: space-between;
 }
