--- a/app/assets/stylesheets/navbar/sidebar.css
+++ b/app/assets/stylesheets/navbar/sidebar.css
@@ -3,7 +3,7 @@
       flex-direction: column; 
   background-color: rgba(28, 28, 28, 0.8);  
   width: 56px;
-  height: auto;
+  height: 800px;
   box-sizing: border-box;
   justify-content: space-evenly;
   /* align-items: center; */
