Started on new navbar

--- a/app/assets/stylesheets/home/landinghome.css
+++ b/app/assets/stylesheets/home/landinghome.css
@@ -34,8 +34,9 @@
 }
 
 .navbar-index-vids {
-    /* display: flex; */
-    /* position: absolute; */
-    /* align-content: flex-end; */
+    display: flex; 
+      flex-direction: row;
+  justify-content: space-between;
+  align-content: space-between;
 
 }
