--- a/app/assets/stylesheets/home/landinghome.css
+++ b/app/assets/stylesheets/home/landinghome.css
@@ -4,14 +4,14 @@
 }
 
 .sidebar-index-cluster {
-    display: flex;
+    /* display: flex; */
 
 }
 
 .sidebar-home {
-    display: flex;
+    /* display: flex;
     position: absolute ;
-    align-content: flex-start;
+    align-content: flex-start; */
 }
 
 .navbar {
@@ -26,7 +26,7 @@
     justify-content: space-between; */
 }
 
-.dupe-vids-one {
+.dupe-vids {
   display: flex;  
   flex-direction: row;
   justify-content: space-between;
@@ -34,9 +34,8 @@
 }
 
 .navbar-index-vids {
-    display: flex; 
-      flex-direction: row;
+  display: flex;  
+  flex-direction: row;
   justify-content: space-between;
   align-content: space-between;
-
 }
