--- a/app/assets/stylesheets/navbar/sidebar.css
+++ b/app/assets/stylesheets/navbar/sidebar.css
@@ -10,3 +10,16 @@
   padding: 0 10px;
   z-index: 0;
 }
+
+.sidebar-open {
+  display: flex;
+  flex-direction: column; 
+  background-color: rgba(28, 28, 28, 0.8);  
+  width: 156px;
+  height: 800px;
+  box-sizing: border-box;
+  justify-content: space-evenly;
+  /* align-items: center; */
+  padding: 0 10px;
+  z-index: 0;
+}
