--- a/app/assets/stylesheets/home/landinghome.css
+++ b/app/assets/stylesheets/home/landinghome.css
@@ -36,6 +36,6 @@
 .navbar-index-vids {
   display: flex;  
   flex-direction: row;
-  justify-content: space-between;
-  align-content: space-between;
+  /* justify-content: space-between;
+  align-content: space-between; */
 }
