--- a/app/assets/stylesheets/navbar/navbar.css
+++ b/app/assets/stylesheets/navbar/navbar.css
@@ -93,3 +93,22 @@
   display: flex;
   flex-direction: row;
 }
+
+.searchbar {
+  display: flex;
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+    color: inherit;
+    /* font-family: 'Roboto','Noto',sans-serif; */
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    margin-left: 4px;
+    max-width: 100%;
+    outline: none;
+    text-align: inherit;
+    width: 100%;
+    flex: 1;
+    flex-basis: .000000001px;
+}
