--- a/app/assets/stylesheets/navbar/navbar.css
+++ b/app/assets/stylesheets/navbar/navbar.css
@@ -99,7 +99,8 @@
     background-color: transparent;
     border: none;
     box-shadow: none;
-    color: inherit;
+    color: white;
+    /* font: white */
     /* font-family: 'Roboto','Noto',sans-serif; */
     font-size: 16px;
     font-weight: 400;
