--- a/app/assets/stylesheets/video/videopost.css
+++ b/app/assets/stylesheets/video/videopost.css
@@ -3,9 +3,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* align-content: center; */
+    position: relative;
     min-height: 370px;
     padding: 16px 24px 0 24px;
     box-sizing: border-box;
     border: 1px solid grey;
     border-radius: 5px;
+    width: 380px;
+    height: 50px;
 }
