--- a/app/assets/stylesheets/navbar/sidebar.css
+++ b/app/assets/stylesheets/navbar/sidebar.css
@@ -1,7 +1,9 @@
 .sidebar {
     display: flex;
       flex-direction: column; 
-  background-color: rgba(28, 28, 28, 0.8);  
+  background-color: rgba(28, 28, 28, 0.8); 
+  color: white;
+
   width: 56px;
   height: 800px;
   box-sizing: border-box;
@@ -15,6 +17,7 @@
   display: flex;
   flex-direction: column; 
   background-color: rgba(28, 28, 28, 0.8);  
+  color: white;
   width: 156px;
   height: 800px;
   box-sizing: border-box;
