--- a/app/assets/stylesheets/navbar/sidebar.css
+++ b/app/assets/stylesheets/navbar/sidebar.css
@@ -10,6 +10,7 @@
   box-sizing: border-box;
   justify-content: space-evenly;
   /* align-items: center; */
+  font-size: medium;
   padding: 0 10px;
   z-index: 0;
 }
