--- a/app/assets/stylesheets/video/videoindex.css
+++ b/app/assets/stylesheets/video/videoindex.css
@@ -10,7 +10,14 @@
   text-decoration: none; 
 }
 
-
+.index-space {
+    display: flex;
+  flex-direction: column;
+  padding-right: 10px;
+  padding-left: 10px;
+  height: auto;
+  width: 15px;
+}
 
 
 .index-items {
