--- a/app/assets/stylesheets/video/comment.css
+++ b/app/assets/stylesheets/video/comment.css
@@ -4,7 +4,7 @@
 }
 
 .comment-form {
-  background-color:  rgba(40, 40, 40, .8);
+  background-color:  #3e3e3e;
   border: none;
   font-size: 15px;
   border-bottom: 1px solid grey;
