--- a/app/assets/stylesheets/video/videopost.css
+++ b/app/assets/stylesheets/video/videopost.css
@@ -9,6 +9,8 @@
     padding: 16px 24px 0 24px;
     box-sizing: border-box;
     border: 1px solid grey;
+    background-color: rgba(28, 28, 28, 0.8);
+    color: white;
     border-radius: 5px;
     width: 380px;
     height: 50px;
