--- a/app/assets/stylesheets/video/videopost.css
+++ b/app/assets/stylesheets/video/videopost.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     /* align-content: center; */
-    position: absolute;
+    position: relative;
     min-height: 370px;
     padding: 16px 24px 0 24px;
     box-sizing: border-box;
@@ -14,6 +14,8 @@
     border-radius: 5px;
     width: 380px;
     height: 50px;
+  margin: 0 auto;
+
 }
 
 .video-post-title-submit {
