--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
     <script type="text/javascript">
       window.d20Url = "<%= image_url('d20.png')%>"
     </script>
+       <script type="text/javascript">
+      window.searchLogoUrl = "<%= image_url('search.png')%>"
+    </script>
     <script type="text/javascript">
       window.uploadLogoUrl = "<%= image_url('uploadlogo.png')%>"
     </script>
