--- a/app/assets/stylesheets/identifier/identifier.css
+++ b/app/assets/stylesheets/identifier/identifier.css
@@ -22,7 +22,8 @@
   display: flex;  
   flex-direction: row;
   align-content: center; 
-  background-color:white;  
+  /* background-color:white;   */
+  background-color: rgba(28, 28, 28, 0.8);;
   width: 450px;
   height: 500px;
   box-sizing: border-box;
