Removed some comments,added back some styling

--- a/app/assets/stylesheets/home/homepage.css
+++ b/app/assets/stylesheets/home/homepage.css
@@ -62,9 +62,9 @@
   background-color: black;
 }
 
-/* .search-bar {
+.search-bar {
   display: flex;
   flex-direction: row;
   bottom: -20;
-} */
+}
 
