--- a/app/assets/stylesheets/login/login.css
+++ b/app/assets/stylesheets/login/login.css
@@ -18,7 +18,7 @@
   display: flex;  
   flex-direction: column;
   align-content: center; 
-  background-color:white;  
+  background-color: rgba(28, 28, 28, 0.8);
   width: 450px;
   height: 500px;
   box-sizing: border-box;
