--- a/app/assets/stylesheets/identifier/identifier.css
+++ b/app/assets/stylesheets/identifier/identifier.css
@@ -23,7 +23,7 @@
   flex-direction: row;
   align-content: center; 
   /* background-color:white;   */
-  background-color: rgba(28, 28, 28, 0.8);;
+  background-color: rgba(28, 28, 28, 0.8);
   width: 450px;
   height: 500px;
   box-sizing: border-box;
