--- a/app/assets/stylesheets/login/login.css
+++ b/app/assets/stylesheets/login/login.css
@@ -19,6 +19,11 @@
   
 }
 
+/* .password-box {
+  display: flex;
+  bottom: 100px;
+} */
+
 .login-input {
   display: flex; 
   flex-direction: column; 
