--- a/app/assets/stylesheets/identifier/identifier.css
+++ b/app/assets/stylesheets/identifier/identifier.css
@@ -41,7 +41,7 @@
       display: flex; 
   flex-direction: column; 
   /* position: absolute; */
-  background-color:white;  
+  background-color: grey;  
   width: 380px;
   height: 50px;
   box-sizing: border-box;
