--- a/app/assets/stylesheets/login/login.css
+++ b/app/assets/stylesheets/login/login.css
@@ -29,6 +29,7 @@
 .login-input {
   display: flex; 
   flex-direction: column; 
+  color: black;
   background-color:grey;  
   width: 380px;
   height: 50px;
