--- a/app/assets/stylesheets/video/videopost.css
+++ b/app/assets/stylesheets/video/videopost.css
@@ -23,6 +23,7 @@
 
 .video-post-title-submit {
     background-color: grey;
-    border: 1px solid white;
+    /* height: 40px; */
+    /* border: 1px solid white; */
 
 }
