Added thumbs up and down

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,13 @@
     <script type="text/javascript">
       window.d20Url = "<%= image_url('d20.png')%>"
     </script>
-       <script type="text/javascript">
+    <script type="text/javascript">
+      window.thumbsDownUrl = "<%= image_url('thumbsdown.png')%>"
+    </script>
+    <script type="text/javascript">
+      window.thumbsUpUrl = "<%= image_url('thumbsup.png')%>"
+    </script>
+    <script type="text/javascript">
       window.searchLogoUrl = "<%= image_url('search.png')%>"
     </script>
     <script type="text/javascript">
