Changing video show css

--- a/app/assets/stylesheets/video/videoshow.css
+++ b/app/assets/stylesheets/video/videoshow.css
@@ -23,6 +23,10 @@
   align-content: space-around;
 }
 
+.vid-author {
+  font-size: 20px;
+}
+
 .vid-info {
   display: flex;
   flex-direction: column;
